n/a - June 15, 2004

	* Reset /proc/sys/kernel/hotplug to /bin/true when running the "stop"
	  command for hotplug
	* Cleaned the output of the mountkernfs script
	* Don't output "Creating files and directories" when it's a lie

n/a - June 8, 2004

	* Changed the location the optional module script is installed to
	  /etc/rc.d/rcsysinit.d/S05modules.

n/a - June 4, 2004

	* Added a echo to the > /proc/sys/kernel/hotplug line, as > did not
	  clear it

n/a - June 3, 2004

	* Added '> /proc/sys/kernel/hotplug' to sendsignals, to disable hotplug
	  events, which may start up new daemons
	* Added elementry bootup logging support.  If it can write to
	  /var/log/boot.log, it will
	* Removed logging support, it kept / from being remounted ro

n/a - June 2, 2004

	* Reorganize what goes on in the udev script
	* Reorganize what goes on in the hotplug script
	* Moved setting /sbin/hotplug as the default hotplug manager into the
	  hotplug script

n/a - June 1, 2004

	* removed usbfs from mountkernfs, and mountfs
	* Edited the udev script, so it'll always set /proc/sys/kernel/hotplug

n/a - May 24, 2004

	* Added more example keymaps and font settings to /etc/sysconfig/console
	* Install the /etc/sysconfig/console file by default

n/a - May 23, 2004

	* Changed the symlink for the optional modules script
	* Removed depmod from the optional modules script

n/a - May 20, 2004

	* Removed the random script.  There is not a strong enough case for
	  adding it to the lfs-bootscripts.

n/a - May 19, 2004

	* Added the random bootscript from blfs-bootscripts

n/a - May 18, 2004

	* Fixed installation of modules configuration
	* Tagged as 2.1.1

n/a - May 16, 2004

	* Added sysklogd configuration file
	* Added example /etc/sysconfig/console file
	* Do not attempt to populate /dev if that directory has already been
	  set up earlier in bootup (such as on initramfs/initrd)
	* Prevent excessive kernel output once klogd starts
	* Added hotplug script

n/a - May 15, 2004
