@@ -12,7 +12,7 @@
 case "$1" in
 	start|restart)
 		# Set hotplug as the default manager of hotplug events
-		echo /sbin/hotplug > /proc/sys/kernel/hotplug
+		echo "/sbin/hotplug" > /proc/sys/kernel/hotplug
 
 		echo "Loading modules for system devices..."
 		for rc in /etc/hotplug/*.rc; do
@@ -22,7 +22,7 @@ case "$1" in
 		;;
 	stop)
 		# Remove hotplug as the default manager of hotplug events
-		echo /bin/true > /proc/sys/kernel/hotplug
+		echo "/bin/true" > /proc/sys/kernel/hotplug
 
 		echo "Unloading modules for system devices..."
 		for rc in /etc/hotplug/*.rc; do
